Finally fixed overflow issue

--- a/wp-content/themes/antilope/resources/sass/pages/_index.scss
+++ b/wp-content/themes/antilope/resources/sass/pages/_index.scss
@@ -48,20 +48,11 @@
 	}
 
 	&__video-wrapper { // this has to be separated from the rest below because idfk
-
 		display: none;
 		z-index: -10;
+		overflow: hidden;
 
 		@include fadeInAnimation(right, null, .5s);
-
-		.video-wrapper {
-			&__video {
-				min-width: 50vw;
-				min-height: 50vh;
-				max-width: 80vw;
-				max-height: 80vh;
-			}
-		}
 	}
 
 	.intro {
@@ -128,10 +119,24 @@
 @media(min-width: 980px) {
 	.intro {
 		&__video-wrapper {
+
 			display: inline-block;
+			width: 100vw;
+			height: 100vh;
+
 			position: absolute;
-			right: -10vw;
-			top: 18vh;
+			top: 0;
+			right: 0;
+			
+			.video-wrapper {
+				&__video {
+					position: absolute;
+					right: -10vw;
+					top: 18vh;
+
+					max-width: 80%;
+				}
+			}
 		}
 	}
 }
@@ -140,14 +145,12 @@
 @media(min-width: 1440px) {
 	.intro {
 		&__video-wrapper {
-			
-			right: -20vw;
-			top: 15vh;
-
 			.video-wrapper {
 				&__video {
-					max-width: 100vw;
-					max-height: 100vh;
+					// TODO: allow it to go higher than the screen
+					top: 0;
+
+					height: 100%;
 				}
 			}
 		}
@@ -156,13 +159,9 @@
 @media(min-width: 1800px) { // size of the image 
 	.intro {
 		&__video-wrapper {
-			
-			top: 10vh;
-
 			.video-wrapper {
 				&__video {
-					min-width: 100vw;
-					min-height: 100vh;
+					top: 10vh;
 				}
 			}
 		}
